--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -23,7 +23,7 @@
         android:layout_width="275dp"
         android:layout_height="390dp"
         android:layout_centerHorizontal="true"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:orientation="vertical"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,7 +59,7 @@
             android:layout_marginTop="2dp"
             android:layout_gravity="center"
             android:background="@drawable/btnblueish"
-            android:backgroundTint="@color/OffWhite"
+
             android:drawableLeft="@drawable/whitemail"
             android:hapticFeedbackEnabled="false"
             android:paddingStart="10dp"
@@ -70,10 +70,10 @@
         <Button
             android:id="@+id/SignwithPhone"
             android:layout_width="200dp"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:background="@color/Red"
+            android:background="@drawable/btnred"
             android:drawableLeft="@drawable/phonewhite"
             android:gravity="center"
             android:paddingLeft="10dp"
