--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -151,7 +151,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:hint="Mobile Number"
-                android:inputType="textPassword" />
+                android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
