datepicker added and icon xml file added

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,7 +14,7 @@
         android:layout_height="500dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
-        android:background="@color/white"
+        android:background="@drawable/background_shape"
         android:orientation="vertical"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -67,6 +67,8 @@
                 android:id="@+id/signup_name"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
+                android:drawableStart="@drawable/gray_person"
+                android:drawablePadding="10dp"
                 android:hint="Name"
                 android:inputType="text" />
 
@@ -99,9 +101,10 @@
                 android:id="@+id/signup_dob"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:drawableStart="@drawable/gray_mail"
+                android:drawableStart="@drawable/gray_calendar"
                 android:drawablePadding="10dp"
                 android:hint="Date Of Birth (dd/mm/yyyy)"
+                android:focusable="false"
                 android:inputType="date" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -112,7 +115,7 @@
             android:text="Gender"
             android:textSize="18sp"
             android:layout_marginTop="11dp" ></TextView>
-        
+
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -143,15 +146,16 @@
             android:id="@+id/signup_mobile_l2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="11dp"
-            app:passwordToggleEnabled="true">
+            android:layout_marginTop="11dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/signup_mobile"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:hint="Mobile Number"
-                android:inputType="number" />
+                android:drawableStart="@drawable/gray_phone"
+                android:drawablePadding="10dp"
+                android:inputType="phone" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
