--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -32,7 +32,7 @@
                 android:hint="Loading"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"
-                android:textColor="#36E3B998"
+                android:textColor="@color/Black"
                 android:textSize="20sp"/>
         </RelativeLayout>
 
@@ -136,8 +136,19 @@
                 android:layout_below="@id/show_mobile"
                 android:background="@color/gray"/>
 
-
         </RelativeLayout>
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_progressbar"
+            android:elevation="10dp"
+            android:layout_below="@+id/div_mobile"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center"
+            android:visibility="visible">
+        </ProgressBar>
+
     </LinearLayout>
 
 </ScrollView>
