--- a/app/src/main/res/layout/activity_upload_profile_pic.xml
+++ b/app/src/main/res/layout/activity_upload_profile_pic.xml
@@ -41,7 +41,7 @@
             android:layout_height="450dp"
             android:id="@+id/iv_profile"
             android:layout_below="@id/btn_choose"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:background="@color/gray"/>
 
         <Button
@@ -64,9 +64,9 @@
             android:layout_below="@+id/btn_upload"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
-            android:visibility="gone">
+            android:visibility="visible">
         </ProgressBar>
 
     </RelativeLayout>
-    
+
 </ScrollView>
