--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -61,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_update_dob"
-            android:hint="Enter your registered email"
+            android:hint="Enter your date of birth"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
             android:padding="6dp"
@@ -125,7 +125,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_update_mobile"
-            android:hint="Enter your registered email"
+            android:hint="Enter your mobile number"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
             android:padding="6dp"
