--- a/app/src/main/res/menu/common_menu.xml
+++ b/app/src/main/res/menu/common_menu.xml
@@ -15,14 +15,14 @@
     <item android:title="Update Email"
         android:id="@+id/menu_update_email"/>
 
-    <item android:title="Settings"
+    <!--<item android:title="Settings"
         android:id="@+id/menu_settings"/>
 
     <item android:title="Change Password"
         android:id="@+id/menu_change_password"/>
 
     <item android:title="Delete Profile"
-        android:id="@+id/menu_delete_profile"/>
+        android:id="@+id/menu_delete_profile"/>-->
 
     <item android:title="Logout"
         android:id="@+id/menu_logout"/>
