--- a/app/src/main/res/layout/activity_place_your_order.xml
+++ b/app/src/main/res/layout/activity_place_your_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blueish"
+    android:background="@color/light_yellow"
     tools:context=".PlaceYourOrderActivity"
         >
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +20,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_margin="10dp"
             android:text="Customer Details"
-            android:textColor="@color/white"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
@@ -30,7 +30,7 @@
             app:layout_constraintEnd_toStartOf="@+id/switchDelivery"
            app:layout_constraintTop_toBottomOf="@+id/tvCustomerDetails"
             android:text="Pickup"
-            android:textColor="@color/white"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
@@ -51,7 +51,7 @@
             app:layout_constraintStart_toEndOf="@+id/switchDelivery"
             app:layout_constraintTop_toBottomOf="@+id/tvCustomerDetails"
             android:text="Delivery"
-            android:textColor="@color/white"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
@@ -131,7 +131,7 @@
             app:layout_constraintTop_toBottomOf="@+id/inputZip"
             android:layout_margin="10dp"
             android:text="Card Details"
-            android:textColor="@color/white"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
@@ -157,9 +157,8 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="05dp"
             android:layout_marginEnd="10dp"
-            android:hint="Enter Card expiry(mm/yyyy)"
+            android:hint="Enter Card expiry(dd/mm/yyyy)"
             android:inputType="date"
-            android:maxLength="6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/inputCardNumber"
@@ -172,9 +171,9 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="05dp"
             android:layout_marginEnd="10dp"
-            android:hint="Enter Card pin(3 digits)"
+            android:hint="Enter Card pin(4 digits)"
             android:inputType="number"
-            android:maxLength="3"
+            android:maxLength="4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/inputCardExpiry"
@@ -188,7 +187,7 @@
             app:layout_constraintTop_toBottomOf="@+id/inputCardPin"
             android:layout_margin="10dp"
             android:text="Total items in cart"
-            android:textColor="@color/white"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
@@ -208,7 +207,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cartItemsRecyclerView"
             android:layout_margin="10dp"
             android:text="Sub total"
-            android:textColor="@color/white"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
@@ -229,7 +228,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvSubtotal"
             android:layout_margin="10dp"
             android:text="Delivery Charge"
-            android:textColor="@color/white"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
@@ -250,7 +249,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCharge"
             android:layout_margin="10dp"
             android:text="Total"
-            android:textColor="@color/white"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
