--- a/app/src/main/res/layout/menu_recycler_row.xml
+++ b/app/src/main/res/layout/menu_recycler_row.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#282836"
+    android:background="@color/lightgray"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -13,15 +13,12 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:cardCornerRadius="5dp"
-    android:layout_margin="8dp"
-    >
-
-
+    android:layout_margin="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#283636"
+        android:background="@color/light_yellow"
         android:orientation="vertical"
         android:layout_gravity="center_vertical"
         >
