--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="colorPrimary">#008577</color>
+    <color name="bgOrange">#A6FF5722</color>
+    <color name="light_yellow">#48FF9900</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="green">#5FB709</color>
