--- a/app/src/main/res/layout/activity_update_email.xml
+++ b/app/src/main/res/layout/activity_update_email.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightgray"
+    android:background="@color/white"
     tools:context=".UpdateEmailActivity">
 
     <LinearLayout
@@ -18,13 +18,14 @@
             android:id="@+id/Rl_update_email"
             android:layout_margin="15dp"
             android:padding="15dp"
-            android:background="@color/white">
+            android:background="@color/light_yellow">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_update_email_head"
                 android:text="You can update your email address now. Please enter your password and verify before continuing."
+                android:textColor="@color/Black"
                 android:layout_marginTop="15dp"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
@@ -46,6 +47,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_updatemail_email"
                 android:hint="Enter your registered email"
+                app:hintTextColor="@color/darkgreen"
+                android:textColorHint="@color/gray"
+                android:textColor="@color/Black"
                 android:inputType="textEmailAddress"
                 android:minHeight="48dp"
                 android:padding="6dp"
@@ -69,7 +73,10 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_updatemail_password"
                 android:hint="Enter your password"
+                app:hintTextColor="@color/darkgreen"
+                android:textColorHint="@color/gray"
                 android:inputType="textEmailAddress"
+                android:textColor="@color/Black"
                 android:minHeight="48dp"
                 android:padding="6dp"
                 android:textSize="20sp"
@@ -96,13 +103,14 @@
             android:layout_below="@+id/Rl_update_email"
             android:layout_margin="15dp"
             android:padding="15dp"
-            android:background="@color/white">
+            android:background="@color/light_yellow">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_update_email_head2"
                 android:text="Your profile is not authenticated/verified yet! "
+                android:textColor="@color/Black"
                 android:layout_marginTop="15dp"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
@@ -124,6 +132,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_updatemail_newemail"
                 android:hint="Enter your new email"
+                app:hintTextColor="@color/darkgreen"
+                android:textColorHint="@color/gray"
+                android:textColor="@color/Black"
                 android:inputType="textEmailAddress"
                 android:minHeight="48dp"
                 android:padding="6dp"
