--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,20 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ForgotPasswordActivity"
-    android:background="@color/gray">
+    android:background="@drawable/background_shape">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:padding="15dp"
-        android:background="@color/white">
+        android:background="@color/light_yellow">
         
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tv_reset_head"
             android:text="Please Enter your registered email to receive password receive link"
+            android:textColor="@color/Black"
             android:layout_marginTop="15dp"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
@@ -35,14 +36,18 @@
             android:textColor="#555555"/>
 
         <EditText
+            android:id="@+id/et_reset_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/et_reset_email"
             android:layout_below="@id/tv_reset_email"
             android:hint="Enter your registered email"
             android:inputType="textEmailAddress"
+            android:minHeight="48dp"
             android:padding="6dp"
-            android:textSize="20sp"/>
+            android:textColor="@color/Black"
+            android:textColorHint="@color/gray"
+            android:textSize="20sp"
+            app:hintTextColor="@color/darkgreen" />
         
         <Button
             android:layout_width="match_parent"
@@ -54,6 +59,7 @@
             android:layout_marginLeft="70dp"
             android:layout_marginRight="70dp"
             android:text="Reset Password"
+            android:textColor="@color/Black"
             android:textSize="20sp"/>
 
         <ProgressBar
