--- a/app/src/main/res/layout/activity_order_succeess.xml
+++ b/app/src/main/res/layout/activity_order_succeess.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightgray"
     tools:context=".OrderSucceessActivity">
 
 
@@ -27,12 +29,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="Done"
-        android:textSize="16sp"
+        android:textSize="20sp"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:gravity="center"
         android:padding="10dp"
         android:layout_margin="10dp"
-        android:background="@drawable/button_bg"
+        android:background="@drawable/btn_green"
         />
 
 
