--- a/app/src/main/res/layout/activity_place_your_order.xml
+++ b/app/src/main/res/layout/activity_place_your_order.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_yellow"
+    android:background="@color/white"
     tools:context=".PlaceYourOrderActivity"
         >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/light_yellow">
 
 
         <TextView android:id="@+id/tvCustomerDetails"
@@ -63,6 +64,9 @@
             android:layout_marginTop="05dp"
             android:layout_marginEnd="10dp"
             android:hint="Enter your name"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
+            android:textColor="@color/Black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/switchDelivery"
@@ -79,6 +83,9 @@
             android:layout_marginTop="05dp"
             android:layout_marginBottom="05dp"
             android:hint="Enter your address"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
+            android:textColor="@color/Black"
             android:visibility="gone"
             android:inputType="text" />
 
@@ -93,6 +100,9 @@
             android:layout_marginTop="05dp"
             android:layout_marginBottom="05dp"
             android:hint="Enter your city"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
+            android:textColor="@color/Black"
             android:visibility="gone"/>
 
         <EditText android:id="@+id/inputState"
@@ -106,6 +116,9 @@
             android:layout_marginTop="05dp"
             android:layout_marginBottom="05dp"
             android:hint="Enter your state"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
+            android:textColor="@color/Black"
             android:visibility="gone"/>
 
         <EditText android:id="@+id/inputZip"
@@ -119,6 +132,9 @@
             android:layout_marginTop="05dp"
             android:layout_marginBottom="05dp"
             android:hint="Enter your zip"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
+            android:textColor="@color/Black"
             android:inputType="number"
             android:maxLength="5"
             android:visibility="gone"/>
@@ -143,6 +159,9 @@
             android:layout_marginTop="05dp"
             android:layout_marginEnd="10dp"
             android:hint="Enter Card Number"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
+            android:textColor="@color/Black"
             android:inputType="number"
             android:maxLength="16"
             app:layout_constraintEnd_toEndOf="parent"
@@ -158,6 +177,9 @@
             android:layout_marginTop="05dp"
             android:layout_marginEnd="10dp"
             android:hint="Enter Card expiry(dd/mm/yyyy)"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
+            android:textColor="@color/Black"
             android:inputType="date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -172,6 +194,9 @@
             android:layout_marginTop="05dp"
             android:layout_marginEnd="10dp"
             android:hint="Enter Card pin(4 digits)"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
+            android:textColor="@color/Black"
             android:inputType="number"
             android:maxLength="4"
             app:layout_constraintEnd_toEndOf="parent"
@@ -218,6 +243,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cartItemsRecyclerView"
             android:layout_margin="10dp"
             android:text="$0.0"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
@@ -239,6 +265,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvSubtotal"
             android:layout_margin="10dp"
             android:text="$0.0"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
@@ -260,6 +287,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCharge"
             android:layout_margin="10dp"
             android:text="$0.0"
+            android:textColor="@color/Black"
             android:textSize="18sp"
             android:textStyle="bold"/>
 
