--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,7 +14,7 @@
         android:layout_height="500dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
-        android:background="@drawable/background_shape"
+        android:background="@color/white"
         android:orientation="vertical"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +27,7 @@
         android:id="@+id/linearlayout"
         android:layout_width="300dp"
         android:layout_height="500dp"
-        android:background="@drawable/background_shape"
+        android:background="@color/light_yellow"
         android:orientation="vertical"
         android:padding="10dp"
         android:layout_centerHorizontal="true"
@@ -61,6 +61,9 @@
             android:id="@+id/signup_name_l2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Name"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
             android:layout_marginTop="15dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -69,7 +72,7 @@
                 android:layout_height="48dp"
                 android:drawableStart="@drawable/gray_person"
                 android:drawablePadding="10dp"
-                android:hint="Name"
+                android:textColor="@color/Black"
                 android:inputType="text" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -79,6 +82,9 @@
             android:id="@+id/signup_email_l2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Email"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
             android:layout_marginTop="11dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -87,7 +93,7 @@
                 android:layout_height="48dp"
                 android:drawableStart="@drawable/gray_mail"
                 android:drawablePadding="10dp"
-                android:hint="Email id"
+                android:textColor="@color/Black"
                 android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,6 +101,9 @@
             android:id="@+id/signup_dob_l2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Date Of Birth (dd/mm/yyyy)"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
             android:layout_marginTop="11dp">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -103,7 +112,7 @@
                 android:layout_height="48dp"
                 android:drawableStart="@drawable/gray_calendar"
                 android:drawablePadding="10dp"
-                android:hint="Date Of Birth (dd/mm/yyyy)"
+                android:textColor="@color/Black"
                 android:focusable="false"
                 android:inputType="date" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -113,6 +122,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/signup_gender"
             android:text="Gender"
+            android:textColor="@color/gray"
             android:textSize="18sp"
             android:layout_marginTop="11dp" ></TextView>
 
@@ -128,7 +138,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Female"
-                android:textColor="@color/gray"
+                android:textColor="@color/Black"
                 android:textSize="18sp"
                 tools:ignore="TouchTargetSizeCheck"></RadioButton>
 
@@ -137,7 +147,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Male"
-                android:textColor="@color/gray"
+                android:textColor="@color/Black"
                 android:textSize="18sp"
                 tools:ignore="TouchTargetSizeCheck"></RadioButton>
         </RadioGroup>
@@ -146,15 +156,18 @@
             android:id="@+id/signup_mobile_l2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Mobile number"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
             android:layout_marginTop="11dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/signup_mobile"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="Mobile Number"
                 android:drawableStart="@drawable/gray_phone"
                 android:drawablePadding="10dp"
+                android:textColor="@color/Black"
                 android:inputType="phone" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -163,14 +176,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
+            android:hint="Password"
+            app:endIconMode="password_toggle"
+            app:endIconTint="@color/Black"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/signup_pass"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="Password"
+                android:textColor="@color/Black"
                 android:inputType="textPassword" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -178,13 +197,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
+            android:hint="Confirm Password"
+            app:endIconMode="password_toggle"
+            app:endIconTint="@color/Black"
+            app:hintTextColor="@color/darkgreen"
+            android:textColorHint="@color/gray"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/signup_conpass"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="Confirm Password"
+                android:textColor="@color/Black"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -261,6 +285,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Already registered"
+                android:textColor="@color/Black"
                 android:textSize="16sp"/>
 
             <TextView
